Change position to absolute

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
     <head>
-        <title>My title</title>
+        <title>My website</title>
         <link href="main.css" rel="stylesheet" type="text/css" />
         <!--Use fontawesome-->
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
@@ -11,9 +11,14 @@
 
         <div class="content">
             <div class="content_inside">
-                <h1>Jason</h1>
+                <h1>Jason Yin</h1>
                 <img src="image/prof.jpeg" class="prof_pic"/>
-                <h3>University of Edinburgh</h3>
+                <div class="personal_info">
+                    <h3>University of Edinburgh</h3>
+                    <p>
+                        Artificial Intelligence and Software Engineering student.
+                    </p>
+                </div>
             </div>
         </div>
 
