--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
     <head>
-        <title>My website</title>
+        <title>Jason Yin</title>
         <link href="main.css" rel="stylesheet" type="text/css" />
         <!--Use fontawesome-->
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
@@ -10,8 +10,16 @@
     <body>
 
         <div class="content">
+            <div class="nav_header">
+                <h1>Hi, I'm Jason Yin</h1>
+                <ul class="header_links">
+                    <li><a>Skills</a></li>
+                    <li><a href="#" target="_blank">Resume</a></li>
+                    <li><a href="mailto:zichenjyin@gmail.com">Contact</a></li>
+                </ul>
+            </div>
+
             <div class="content_inside">
-                <h1>Jason Yin</h1>
                 <img src="image/prof.jpeg" class="prof_pic"/>
                 <div class="personal_info">
                     <h3>University of Edinburgh</h3>
