--- a/index.html
+++ b/index.html
@@ -8,23 +8,16 @@
     </head>
 
     <body>
-
         <div class="content">
-            <div class="nav_header">
-                <h1>Hi, I'm Jason Yin</h1>
-                <ul class="header_links">
-                    <li><a>Skills</a></li>
-                    <li><a href="#" target="_blank">Resume</a></li>
-                    <li><a href="mailto:zichenjyin@gmail.com">Contact</a></li>
-                </ul>
-            </div>
-
             <div class="content_inside">
-                <img src="image/prof.jpeg" class="prof_pic"/>
                 <div class="personal_info">
-                    <h3>University of Edinburgh</h3>
+                    <h1>Hello, I'm Jason Yin</h1>
+                    <img src="image/prof.jpeg" class="prof_pic"/>
                     <p>
-                        Artificial Intelligence and Software Engineering student.
+                        I'm currently studying Artificial Intelligence and Software Engineering at The University of Edinburgh.
+                    </p>
+                    <p>
+                        Feel free to <a href="#Bot">Contact me</a>
                     </p>
                 </div>
             </div>
@@ -36,8 +29,10 @@
                 <a href="https://twitter.com/zichenjyin" target="_blank"><i class="fab fa-twitter-square"></i></a>
                 <a href="https://www.linkedin.com/in/zichenyin/" target="_blank"><i class="fab fa-linkedin"></i></a>
                 <a href="https://github.com/awpstew" target="_blank"><i class="fab fa-github-square"></i></a>
+                <a href="mailto:zichenjyin@gmail.com"><i class="fas fa-envelope-square"></i></a>
             </div>
-            <h5 class="copyright">&copy; 2018 Zichen Yin. All rights reserved</h6>
+            <h5 class="copyright">&copy; 2018 Zichen Yin.</h6>
+            <a name="Bot"></a>
         </footer>
 
     </body>
