--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <div class="content_inside">
                 <div class="personal_info">
                     <h1>Hello, I'm Jason Yin</h1>
-                    <img src="image/prof.jpeg" class="prof_pic"/>
+                    <img src="image/profile.jpeg" class="prof_pic"/>
                     <p>
                         I'm currently studying Artificial Intelligence and Software Engineering at The University of Edinburgh.
                     </p>
@@ -26,10 +26,10 @@
         <footer class="footer">
             <div class="line_break"></div>
             <div class="contact_me">
-                <a href="https://twitter.com/zichenjyin" target="_blank"><i class="fab fa-twitter-square"></i></a>
-                <a href="https://www.linkedin.com/in/zichenyin/" target="_blank"><i class="fab fa-linkedin"></i></a>
-                <a href="https://github.com/awpstew" target="_blank"><i class="fab fa-github-square"></i></a>
-                <a href="mailto:zichenjyin@gmail.com"><i class="fas fa-envelope-square"></i></a>
+                <a href="https://twitter.com/zichenjyin" target="_blank"><i class="fab fa-twitter-square hover_animation"></i></a>
+                <a href="https://www.linkedin.com/in/zichenyin/" target="_blank"><i class="fab fa-linkedin hover_animation"></i></a>
+                <a href="https://github.com/awpstew" target="_blank"><i class="fab fa-github-square hover_animation"></i></a>
+                <a href="mailto:zichenjyin@gmail.com"><i class="fas fa-envelope-square hover_animation"></i></a>
             </div>
             <h5 class="copyright">&copy; 2018 Zichen Yin.</h6>
             <a name="Bot"></a>
