--- a/index.html
+++ b/index.html
@@ -17,22 +17,21 @@
                         I'm currently studying Artificial Intelligence and Software Engineering at The University of Edinburgh.
                     </p>
                     <p>
-                        Feel free to <a href="#Bot">Contact me</a>
+                        Interested in working together? Feel free to <a href="mailto:zichenjyin@gmail.com">contact</a> me.
                     </p>
                 </div>
             </div>
         </div>
 
         <footer class="footer">
-            <div class="line_break"></div>
+            <!--<div class="line_break"></div>-->
             <div class="contact_me">
                 <a href="https://twitter.com/zichenjyin" target="_blank"><i class="fab fa-twitter-square hover_animation"></i></a>
                 <a href="https://www.linkedin.com/in/zichenyin/" target="_blank"><i class="fab fa-linkedin hover_animation"></i></a>
                 <a href="https://github.com/awpstew" target="_blank"><i class="fab fa-github-square hover_animation"></i></a>
-                <a href="mailto:zichenjyin@gmail.com"><i class="fas fa-envelope-square hover_animation"></i></a>
+                <!--<a href="mailto:zichenjyin@gmail.com"><i class="fas fa-envelope-square hover_animation"></i></a>-->
             </div>
             <h5 class="copyright">&copy; 2018 Zichen Yin.</h6>
-            <a name="Bot"></a>
         </footer>
 
     </body>
