--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!doctype html>
 <html>
     <head>
+        <meta charset="utf-8">
+        <meta name="author" content="Zichen Yin">
+        <meta name="keywords" content="Zichen Yin,Jason Yin">
+        <meta name="description" content="personal website">
+
         <title>Jason Yin</title>
         <link href="main.css" rel="stylesheet" type="text/css" />
         <!--Use fontawesome-->
