--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
                     <h1>Hello, I'm Jason Yin</h1>
                     <img src="image/profile.jpeg" class="prof_pic"/>
                     <p>
-                        I'm currently studying Artificial Intelligence and Software Engineering at The University of Edinburgh.
+                        AI and Software Engineering graduate from The University of Edinburgh
+                        <br />working in the analytics industry as a backend developer.
                     </p>
                     <p>
                         Interested in working together? Feel free to <a href="mailto:zichenjyin@gmail.com">contact</a> me.
